# scaler

./: .env  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  run_inference.bat  setup.bat  start_server.bat  tasks.py
server/: app.py  environment.py
