[project]
name = "code-review-env"
version = "1.0.0"
description = "AI Code Review Environment using FastAPI and OpenEnv"
authors = [
    { name = "Kavin Kaarthik" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
